--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.4.17",
     "@nestjs/core": "^10.4.17",
     "@nestjs/platform-express": "^10.4.17",
+    "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.7.0",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.13",
