--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     container_name: finance-scraper
     ports:
       - '7000:7000'
-      # .env
-    env_file:
-      - .env
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
 
