--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.8'
 
 services:
   app:
-    build: .
-    container_name: finance-scraper
+    image: wfelipe2011/finance:master
     ports:
       - '7000:7000'
     environment:
       - DATABASE_URL=${DATABASE_URL}
+      - WHATSAPP_USERNAME=${WHATSAPP_USERNAME}
+      - WHATSAPP_PASSWORD=${WHATSAPP_PASSWORD}
     deploy:
       replicas: 1
       resources:
