feat: add JWT authentication with login, registration, guards, and decorators; update dependencies and modules for auth integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,19 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@enum/*": ["src/enum/*"],
+      "@auth/*": ["src/auth/*"],
+      "@modules/*": ["src/modules/*"],
+      "@infra/*": ["src/infra/*"],
+      "@decorators/*": ["src/decorators/*"],
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   }
