--- a/package.json
+++ b/package.json
@@ -26,12 +26,18 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "fast-csv": "^5.0.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
@@ -39,8 +45,10 @@
     "@nestjs/testing": "^11.1.1",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.11.29",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
