--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fast-csv": "^5.0.2",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
+    "lodash": "^4.17.21",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -57,6 +58,7 @@
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.17",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
     "@types/supertest": "^6.0.3",
