--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "chrono-node": "^2.8.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "csv-parser": "^3.2.0",
