--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "strictBindCallApply": false,
     "strict": true,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "esModuleInterop": true,
+    "noPropertyAccessFromIndexSignature": true
   }
 }
