--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - '7000:7000'
     environment:
       - DATABASE_URL=${DATABASE_URL}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - PORT=${PORT}
+      - JWT_SECRET=${JWT_SECRET}
     deploy:
       replicas: 1
       resources:
