feat(financial): adds FinancialServiceAgent with prompts, tools, and execution logic for financial analysis; updates app controller for chat route; integrates new tools and schema; enhances dependency injection and event handling; refactors related modules and services for new capabilities

--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   },
   "dependencies": {
     "@google/genai": "^1.0.1",
+    "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
-    "@langchain/google-genai": "^0.2.9",
+    "@langchain/deepseek": "^0.0.1",
+    "@langchain/google-genai": "^0.2.10",
+    "@langchain/langgraph": "^0.2.73",
+    "@langchain/openai": "^0.5.11",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.1.1",
     "@nestjs/core": "^11.1.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^11.1.1",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
@@ -42,6 +47,8 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
     "lodash": "^4.17.21",
+    "pg": "^8.16.0",
+    "pgvector": "^0.2.1",
     "prisma": "^6.8.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
@@ -62,6 +69,7 @@
     "@types/lodash": "^4.17.17",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.21",
+    "@types/pg": "^8.15.2",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
